--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tablepage-vue3",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "private": false,
   "author": "mr_zhu_dw",
   "keywords": [
@@ -19,21 +19,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "core-js": "^3.8.3",
-    "element-plus": "2.2.16",
+    "element-plus": ">=2.2.16",
     "sass-loader": "^14.1.1",
-    "tablepage-vue3": "^0.1.0",
     "vue": "^3.2.13",
     "vue-router": "4.1.5"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.16",
-    "@babel/eslint-parser": "^7.12.16",
-    "@vue/cli-plugin-babel": "~5.0.0",
-    "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
-    "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3",
     "sass": "^1.74.1"
   },
   "eslintConfig": {
@@ -49,13 +41,6 @@
       "parser": "@babel/eslint-parser"
     },
     "rules": {}
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/gygh-zdw/tablePage-vue3.git"
-  },
-  "bugs": {
-    "url": "https://github.com/gygh-zdw/tablePage-vue3/issues"
   },
   "browserslist": [
     "> 1%",
