--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tablepage-vue3",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "private": false,
   "author": "mr_zhu_dw",
   "keywords": [
@@ -19,14 +19,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "element-plus": ">=2.2.16",
-    "sass-loader": "^14.1.1",
-    "vue": "^3.2.13",
-    "vue-router": "4.1.5"
+    "sass": "1.54.9"
   },
   "devDependencies": {
     "@vue/cli-service": "~5.0.0",
-    "sass": "^1.74.1"
+    "element-plus": ">=2.2.16",
+    "vue": "^3.2.13",
+    "vue-router": "4.1.5"
   },
   "eslintConfig": {
     "root": true,
