--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tablepage-vue3",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "private": false,
   "author": "mr_zhu_dw",
   "keywords": [
@@ -32,7 +32,9 @@
     "@vue/cli-service": "~5.0.0",
     "element-plus": ">=2.2.16",
     "vue": "^3.2.13",
-    "vue-router": "4.1.5"
+    "vue-router": "4.1.5",
+    "sass": "^1.75.0",
+    "sass-loader": "^14.2.1"
   },
   "eslintConfig": {
     "root": true,
